--- a/Arty/Pages/personalTerritory/index.cshtml
+++ b/Arty/Pages/personalTerritory/index.cshtml
@@ -18,57 +18,12 @@
     </div>
 }
 
-<style>
-    .container {
-        grid-template-columns: 1fr 1fr 1fr 1fr;
-        display: grid;
-        grid-gap: 10px;
-    }
-
-    .container-head{
-        grid-template-columns: 1fr 1fr 1fr;
-        display: grid;
-    }
-
-    .item-head-btn{
-        grid-column-start: 1;
-        grid-column-end: 2;
-    }
-
-    .item-head-title {
-        grid-column-start: 2;
-        grid-column-end: 4;
-    }
-
-    .item {
-        padding: 10px;
-        border: 1px solid black;
-    }
-
-    .area-in-work {
-        background-color: #FFAEAE;
-    }
-
-    .area-in-rest {
-        background-color: #F8FF89;
-    }
-
-    .area-ready-never {
-        background-color: #ADFFA2;
-    }
-
-    .area-ready-worked {
-        background-color: #006400;
-        color: #ADFFA2;
-    }
-
-</style>
-
 
 <div class="container">
 
     <div class="item-head-btn">
         <a asp-page="/territory/index" class="btn btn-outline-secondary">назад</a>
+        <a asp-page="/personalTerritory/createex" asp-page-handler="create" asp-route-terrain="@Model.areaId" class="btn btn-outline-secondary">новый</a>
     </div>
     <div class="item-head-title">
         <h3>@Model.areaName</h3>
@@ -94,7 +49,6 @@
     </form>*@
 
 </div>
-
 
 <div class="container">
 
@@ -152,3 +106,50 @@
     }
 
 </div>
+
+
+<style>
+    .container {
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        display: grid;
+        grid-gap: 10px;
+    }
+
+    .container-head {
+        grid-template-columns: 1fr 1fr 1fr;
+        display: grid;
+    }
+
+    .item-head-btn {
+        grid-column-start: 1;
+        grid-column-end: 2;
+    }
+
+    .item-head-title {
+        grid-column-start: 2;
+        grid-column-end: 4;
+    }
+
+    .item {
+        padding: 10px;
+        border: 1px solid black;
+    }
+
+    .area-in-work {
+        background-color: #FFAEAE;
+    }
+
+    .area-in-rest {
+        background-color: #F8FF89;
+    }
+
+    .area-ready-never {
+        background-color: #ADFFA2;
+    }
+
+    .area-ready-worked {
+        background-color: #006400;
+        color: #ADFFA2;
+    }
+
+</style>
